<resources>
    <string name="app_name">myExoTerra</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="signin">Sign in</string>
    <string name="forget_password">Forget password?</string>
    <string name="signup">Sign up</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="hint_email">Email</string>
    <string name="password">Password</string>
    <string name="error_email">Invalid email</string>
    <string name="error_password">Password length 6 ~ 16</string>
    <string name="error_nickname">Nickname can not be empty</string>
    <string name="error_verifycode">Verify code is 4 digits</string>
    <string name="hint_nickname">Nickname</string>
    <string name="has_account_signin">Already has account? Back to signin</string>
    <string name="new_password">New password</string>
    <string name="hint_verifycode">Verify code</string>
    <string name="send_verifycode">Get Verifycode</string>
    <string name="foundback_password">Foundback Password</string>
    <string name="title_register_success">Register success</string>
    <string name="msg_active_account">An activate email has been send to your email, please active your account before signin by click the link in the email.</string>
    <string name="title_foundback_success">Success</string>
    <string name="msg_foundback_success">Password has been reset.</string>
    <string name="router">Router</string>
    <string name="title_smartconfig_failed">SmartConfig Failed</string>
    <string name="title_smartconfig_completed">SmartConfig Completed</string>
    <string name="placeholder_ssid">${ssid}</string>
    <string name="placeholder_mac">${mac}</string>
    <string name="placeholder_ip">${ip}</string>
    <string name="msg_smartconfig_failed">SmartConfig failed.</string>
    <string name="msg_smartconfig_nodevice_connected">No device connected to ${ssid}.</string>
    <string name="msg_smartconfig_device_connect_router">Device (mac: ${mac}) connected to ${ssid}, IP: ${ip}. Do you want to subscribe device?</string>
    <string name="warn_device_donot_support_5g">Device does not support 5G!</string>
    <string name="msg_subscribe_success">Subscribed success</string>
    <string name="msg_subscribe_fail">Subscribed failed: </string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="timezone">TimeZone</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="save">Save</string>
    <string name="error_longitude">-180.0 ~ 180.0</string>
    <string name="error_latitude">-60.0 ~ 60.0</string>
    <string name="week_sun">Sun</string>
    <string name="week_mon">Mon</string>
    <string name="week_tue">Tue</string>
    <string name="week_wed">Wed</string>
    <string name="week_thu">Thu</string>
    <string name="week_fri">Fri</string>
    <string name="week_sat">Sat</string>
    <string name="remove">Remove</string>
    <string name="title_set_timer">Set Timer</string>
    <string name="sunrise">Sunrise</string>
    <string name="day_light">Day Light</string>
    <string name="sunset">Sunset</string>
    <string name="night">Night</string>
    <string name="turnoff">Turn off</string>
    <string name="disabled">Disabled</string>
    <string name="ramp">Ramp</string>
    <string name="device_datetime">Device datetime</string>
    <string name="device_datetime_not_correct">Devie datetime not correct? Set timezone.</string>
    <string name="set_timezone">Set timezone</string>
    <string name="location">Location</string>
    <string name="choose">Choose</string>
    <string name="rename">Rename</string>
    <string name="device_name">Device name</string>
    <string name="rename_device">Rename device</string>
    <string name="input_empty">Input can not be empty.</string>
    <string name="select_profile">Select Profile</string>
    <string name="timezone_and_location"><![CDATA[Timezone & Location]]></string>
    <string name="choose_timezone">Choose Timezone</string>
    <string name="profiles">Profiles</string>
    <string name="profile">Profile</string>
    <string name="msg_timepoints_min">Timepoints count min 4.</string>
    <string name="title_delete_timepoint">Delete #{index} Set Time</string>
    <string name="msg_timepoints_max">Timepoints count max 10.</string>
    <string name="title_add_time">Add Time</string>
    <string name="current_profile">Current Profile:</string>
    <string name="smartconfig">SmartConfig</string>
    <string name="remove_timer">Remove Timer</string>
    <string name="poweron">Turn on</string>
    <string name="poweroff">Turn off</string>
    <string name="timer_count_over">Timers count max 24.</string>
    <string name="add_device">Add A Device</string>
    <string name="choose_product">Choose your device</string>
    <string name="connect_net">Connect to net</string>
    <string name="next">Next</string>
    <string name="compatible_mode">Compatible Mode</string>
    <string name="share">Share</string>
    <string name="share_device">Share Device</string>
    <string name="receive_device_share">Receive Device Share</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
    <string name="later">Later</string>
    <string name="title_location_permission">Request Location Permission</string>
    <string name="msg_location_permission">Application need Location permission to scan WiFi and Bluetooth Low Energy device from Android 6.0.</string>
    <string name="upgrade">Upgrade</string>
    <string name="devices">Devices</string>
    <string name="me">Me</string>
    <string name="invalid_profile">Invalid Profile</string>
    <string name="imort_from_default">Import profile from default</string>
    <string name="msg_import_from_default">Invalid profile, import from default?</string>
    <string name="home_name">Home Name</string>
    <string name="create_home">Create Home</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="invite_member">Invite member</string>
    <string name="add_device_to_home">Add Device To Home</string>
    <string name="detail">Detail</string>
    <string name="receive_home_share">Receive Home Share</string>
    <string name="device_detail">Device Detail</string>
    <string name="user_list">User List</string>
    <string name="share_list">Share List</string>
    <string name="deviceid">Device ID</string>
    <string name="macaddress">MAC Address</string>
    <string name="device_users">Device users</string>
    <string name="firmware_version">Firmware Version</string>
    <string name="share_to_me">Share to me</string>
    <string name="msg">Message</string>
    <string name="home_invite">Home Invite</string>
    <string name="denied">Denied</string>
    <string name="accepted">Accepted</string>
    <string name="cancelled">Cancelled</string>
    <string name="overtime">Overtime</string>
    <string name="unsubscribed">Unsubscribed</string>
    <string name="invalid">Invalid</string>
    <string name="device_share">Device share</string>
    <string name="device_firmware_uptodate">Device firmware is up-to-date.</string>
    <string name="poweroff_device">1. Power off device</string>
    <string name="poweron_device">2. Power on device, then press and hold the device key immediately until the led indicator flash.</string>
    <string name="phone_connect_to_device">3. Connect your phone to %1$s.</string>
    <string name="connect_device">Connect Device</string>
    <string name="timeout">Timeout</string>
    <string name="error_empty">Can not be empty.</string>
    <string name="cloud_online">Cloud online</string>
    <string name="cloud_offline">Cloud offline</string>
    <string name="signin_failed">Signin failed</string>
    <string name="signup_failed">Signup failed</string>
    <string name="error_wifi_password">Wifi password invalid.</string>
    <string name="input_router_password">Input router password</string>
    <string name="device_zone">Device zone</string>
    <string name="smartconfig_guide_default">
        1.  Hold the Button on your device until the green led flashes once every second\n
    </string>
    <string name="smartconfig_guide_strip">
        1.  Press the Touch Button on your device to change the led to green\n
        2.  Hold the Touch Button until the green led flashes once every second\n
    </string>
    <string name="apconfig_guide_default">
        1.  Hold the Button on your device until the green led flashes once every second\n
        2.  Again hold the button until the green led flashes once every three seconds\n
        3.  Connect your phone to %1$s\n
    </string>
    <string name="apconfig_guide_strip">
        1.  Press the Touch Button on your device to change the led to green\n
        2.  Hold the Touch Button until the green led flashes once every second\n
        3.  Again hold the Touch Button until the green led flashes once every three second\n
        4.  Connect your phone to %1$s\n
    </string>
    <string name="config_guide">Config guide</string>
    <string name="smartconfig_confirm">Make sure the green led flash quickly</string>
    <string name="apconfig_confirm">Make sure the green led flash slowly</string>
    <string name="turnon">Turn on</string>
    <string name="device_upgrade_msg">Device firmware can upgrade from version %1$d to %2$d.</string>
    <string name="upgrading">Upgrading</string>
    <string name="hint_new_password">New password</string>
    <string name="reset_password">Reset Password</string>
    <string name="group">Group</string>
    <string name="habitat_name">Habitat name</string>
    <string name="create_group">Create group</string>
    <string name="sync_func_enabled">Synchro function is enabled</string>
    <string name="sync_func_disabled">Synchro function is disabled</string>
    <string name="msg_get_verifycode">Verification code has been sent to the email. If you do not receive the verification code, please check the spam.</string>
    <string name="title_verifycode_sent">Verifycode sent success</string>
    <string name="title_verifycode_sent_failed">Verifycode sent failed</string>
    <string name="rename_group">Rename group</string>
    <string name="device_location">Device location</string>
    <string name="remove_device">Remove device</string>
    <string name="msg_delete_device">Confirm delete device?</string>
    <string name="linkage">Linkage</string>
    <string name="linkage_enable">Linkage Enable</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="habitats">Habitats</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="execute_once">Execute once</string>
    <string name="everyday">Every day</string>
    <string name="modify_password">Modify password</string>
    <string name="prefs">Prefs</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="celsius">℃</string>
    <string name="fahrenheit">℉</string>
    <string name="timeformat">Time format</string>
    <string name="time24h">24h</string>
    <string name="time12h">12h</string>
    <string name="microtope">Microtope</string>
    <string name="uvb_buddy">UVB Buddy</string>
    <string name="restore_rays">Restore The Rays</string>
    <string name="personal_infomation">Personal Information</string>
    <string name="units">Units</string>
    <string name="invite_messages">Invite Messages</string>
    <string name="custom">Custom</string>
    <string name="time_period">Time Period</string>
</resources>