<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_bnv_home"
        android:icon="@drawable/ic_reptile"
        android:visible="false"
        android:title="@string/home"/>
    <item
        android:id="@+id/main_bnv_habitat"
        android:icon="@drawable/ic_dashboard"
        android:visible="false"
        android:title="@string/habitats"/>
    <item
        android:id="@+id/main_bnv_devices"
        android:icon="@drawable/ic_devices_white"
        android:title="@string/devices"/>
    <item
        android:id="@+id/main_bnv_me"
        android:icon="@drawable/ic_me_white"
        android:title="@string/me"/>
    <item
        android:id="@+id/main_bnv_pref"
        android:icon="@drawable/ic_prefs_white"
        android:title="@string/prefs"/>
</menu>