<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_device_status"
        android:title=""
        app:actionLayout="@layout/menu_device_status"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_device_edit"
        android:title="@string/timezone_and_location"
        android:icon="@drawable/ic_edit_white_32dp"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/menu_device_rename"
        android:title="@string/rename"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/menu_device_datetime"
        android:title="@string/device_datetime"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/menu_device_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share_white_32dp"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/menu_device_upgrade"
        android:title="@string/upgrade"
        app:showAsAction="collapseActionView"/>

</menu>