<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/marginUnit"
    android:background="@color/colorBottomDialog"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/dialog_repeat_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/dialog_repeat_execonce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:padding="@dimen/marginUnit"
            android:background="?attr/selectableItemBackground"
            android:text="@string/execute_once"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/textSizeSecondary"
            android:drawableRight="@drawable/selector_check"/>

        <RadioButton
            android:id="@+id/dialog_repeat_everyday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:padding="@dimen/marginUnit"
            android:background="?attr/selectableItemBackground"
            android:text="@string/everyday"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/textSizeSecondary"
            android:drawableRight="@drawable/selector_check"/>

        <RadioButton
            android:id="@+id/dialog_repeat_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:padding="@dimen/marginUnit"
            android:background="?attr/selectableItemBackground"
            android:text="@string/custom"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/textSizeSecondary"
            android:drawableRight="@drawable/selector_check"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="@dimen/marginUnit">

        <CheckBox
            android:id="@+id/dialog_repeat_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:ems="3"
            android:gravity="center"
            android:textColor="@color/selector_week"
            android:textSize="@dimen/textSizeTiny"
            android:text="@string/week_sun"/>
        <CheckBox
            android:id="@+id/dialog_repeat_mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:ems="3"
            android:gravity="center"
            android:textColor="@color/selector_week"
            android:textSize="@dimen/textSizeTiny"
            android:text="@string/week_mon"/>
        <CheckBox
            android:id="@+id/dialog_repeat_tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:ems="3"
            android:gravity="center"
            android:textColor="@color/selector_week"
            android:textSize="@dimen/textSizeTiny"
            android:text="@string/week_tue"/>
        <CheckBox
            android:id="@+id/dialog_repeat_wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:ems="3"
            android:gravity="center"
            android:textColor="@color/selector_week"
            android:textSize="@dimen/textSizeTiny"
            android:text="@string/week_wed"/>
        <CheckBox
            android:id="@+id/dialog_repeat_thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:ems="3"
            android:gravity="center"
            android:textColor="@color/selector_week"
            android:textSize="@dimen/textSizeTiny"
            android:text="@string/week_thu"/>
        <CheckBox
            android:id="@+id/dialog_repeat_fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:ems="3"
            android:gravity="center"
            android:textColor="@color/selector_week"
            android:textSize="@dimen/textSizeTiny"
            android:text="@string/week_fri"/>
        <CheckBox
            android:id="@+id/dialog_repeat_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:ems="3"
            android:gravity="center"
            android:textColor="@color/selector_week"
            android:textSize="@dimen/textSizeTiny"
            android:text="@string/week_sat"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_repeat_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:textSize="@dimen/textSizeSecondary"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/dialog_repeat_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:textSize="@dimen/textSizeSecondary"
            android:text="@string/ok"/>
    </LinearLayout>

</LinearLayout>